[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/vase/Vase.gd" type="Script" id=1]
[ext_resource path="res://nodes/vase/Vase.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 25.4444

[node name="Vase" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="FadeTween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="3"]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="area_entered" from="." to="." method="_on_Vase_area_entered"]

[connection signal="tween_completed" from="FadeTween" to="." method="_on_FadeTween_tween_completed"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


